<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">일공</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>

    <string name="menu_schedule">Schedule</string>
    <string name="menu_friend">Friend</string>

    <string name="calendar_today">Today</string>
    <string name="menu_schedule_category">개인 스케줄 </string>
    <string name="menu_schedule_shared">공유 스케줄 </string>
    <string name="menu_schedule_request">요청 스케줄 </string>

    <string name="exit_app_hint">한번 더 누르시면 종료됩니다..</string>
    <string-array name="calendar_month">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string name="calendar_day">%d day</string>
    <string name="calendar_year">%d-</string>
    <string name="menu_event_set">이벤트</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBtfoWf45RbAnQ7mDul2qiW37sB5jEy_Ho</string>
    <string name="kakao_app_key">c6731f0670f86e0a8c073526aca85a17</string>
    <string name="facebook_app_key">msM0LivIUp/unpcjUiGUAIsjfEo=</string>

    <!-- 스케줄 -->
    <string name="schedule_event_detail_setting">스케줄 세팅</string>
    <string name="schedule_title">스케줄..</string>
    <string name="remarks">내용</string>
    <string name="please_input_desc">내용을 적어주세요..</string>

    <string name="schedule_input"> 할 일을 적으세요..</string>

    <string name="hour">시작 시간</string>

    <string name="cancel">취소</string>
    <string name="confirm">확인</string>

    <string name="negativeFriend">거절</string>
    <string name="positiveFriend">동의</string>


    <string name="schedule_show_finish_task">스케줄 완료 보기</string>
    <string name="finished">완료</string>

    <string name="schedule_input_null">스케줄이 비어있으면 안 됩니다.</string>

    <string name="start">시작</string>
    <string name="finish">완료</string>
    <string name="holiday">공휴일</string>
    <string name="shared">Shared</string>
    <string name="notShared">UnShare</string>

    <string name="schedule_delete_this_schedule">스케줄을 삭제할래요?</string>

    <string name="schedule_hide_finish_task">숨기기 </string>

    <string name="date_format_no_time">%1$s-%2$s-%3$s</string>
    <string name="click_here_select_date">시간을 선택해주세요.</string>

    <string name="date_format">yyyy-MM-dd HH:mm</string>
    <string name="date_onlyYear_format">yyyy-MM-dd</string>
    <string name="click_here_select_location">위치를 선택해주세요.</string>

    <string name="schedule_input_content_is_no_null">스케줄 제목이 비었네요..</string>

    <string name="select_event_set">이벤트 선택</string>
    <string name="menu_add_event_set">이벤트 추가</string>

    <string name="menu_no_category">미정 </string>

    <string name="add_location">위치 추가</string>
    <string name="click_input_location">위치를 클릭하세요</string>


    <string name="event_set_list_name">스케줄 분류</string>

    <string name="event_set_select_color">색깔을 선택해주세요.</string>
    <string name="event_set_name_is_not_null">내용이 비어있습니다.</string>

    <string name="event_set_delete_this_event_set">삭제하시겠어요?</string>

    <string name="human_time_format">a hh:mm:ss</string>

    <string name="human_time_format2">HH:mm:ss</string>

    <string name="arrived">도착했나요?</string>
    <string name="holidayDomain">http://schedule.mactroops.com:3000/v1/holiday/</string>

    <string-array name="calendar_week">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tues</item>
        <item>Wed</item>
        <item>Thur</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>

    <string name="hint_email">E-mail</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_nick_name">NickName</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_birth">Birth(19950818)</string>

    <string name="btn_sign_in">Login</string>
    <string name="btn_facebook_sign_in">Login in with Facebook</string>

    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_find_password">Forgot Password</string>

    <string name="text_remember_login">Remember Login</string>

</resources>


