<?xml version="1.0" encoding="utf-8"?>
<!-- http://dktfrmaster.blogspot.com/2018/03/coordinatorlayout.html-->
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWrite"
    android:fitsSystemWindows="true">

    <include
        layout="@layout/simple_title_bar"/>

    <!-- focus 옵션을 주면 EditText에 포커스 가는것 방지가능.-->
    <!--  스크롤 이벤트를 발생할 것임을 알림 -> layout_behavior -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWrite"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:background="@color/color_schedule_line"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/schedule_item_size"
            android:orientation="horizontal">

            <View
                android:id="@+id/vScheduleColor"
                android:layout_width="@dimen/space_10dp"
                android:layout_height="match_parent"
                android:background="@color/color_schedule_pink"/>

            <EditText
                android:id="@+id/etScheduleTitle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/space_10dp"
                android:layout_marginRight="@dimen/space_10dp"
                android:layout_weight="1"
                android:background="@color/colorTranslate"
                android:ellipsize="end"
                android:layout_gravity="center_vertical"
                android:lines="1"
                android:hint="@string/schedule_title"
                android:text="스케줄 적기"
                android:textColor="@color/color_schedule_title_text"
                android:textSize="@dimen/text_size_18sp"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:background="@color/color_schedule_line"/>

        <LinearLayout
            android:id="@+id/llScheduleEventSet"
            android:layout_width="match_parent"
            android:layout_height="@dimen/schedule_item_size"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivScheduleEventSetIcon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="@dimen/space_16dp"
                android:src="@mipmap/ic_detail_category"/>

            <TextView
                android:id="@+id/tvScheduleEventSet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_12dp"
                android:layout_marginRight="@dimen/space_10dp"
                android:layout_weight="1"
                android:background="@color/colorTranslate"
                android:ellipsize="end"
                android:lines="1"
                android:text="이벤트"
                android:textColor="@color/color_schedule_text"
                android:textSize="@dimen/text_size_16sp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/space_12dp"
                android:src="@mipmap/ic_detail_arrow_normal"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:background="@color/color_schedule_line"/>

        <LinearLayout
            android:id="@+id/llAddFriend"
            android:layout_width="match_parent"
            android:layout_height="@dimen/schedule_item_size"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="@dimen/space_16dp"
                android:src="@mipmap/ic_user"/>

            <TextView
                android:id="@+id/tvAddFriend"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_12dp"
                android:layout_marginRight="@dimen/space_10dp"
                android:layout_weight="1"
                android:background="@color/colorTranslate"
                android:ellipsize="end"
                android:lines="1"
                android:text="공유 유저"
                android:textColor="@color/color_schedule_text"
                android:textSize="@dimen/text_size_16sp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/space_12dp"
                android:src="@mipmap/ic_detail_arrow_normal"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:background="@color/color_schedule_line"/>

        <LinearLayout
            android:id="@+id/llScheduleTime"
            android:layout_width="match_parent"
            android:layout_height="@dimen/schedule_item_size"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="@dimen/space_16dp"
                android:src="@mipmap/ic_detail_clock"/>

            <TextView
                android:id="@+id/tvScheduleTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_12dp"
                android:layout_marginRight="@dimen/space_10dp"
                android:layout_weight="1"
                android:background="@color/colorTranslate"
                android:ellipsize="end"
                android:lines="1"
                android:text="2018-06-30 14:00"
                android:textColor="@color/color_schedule_text"
                android:textSize="@dimen/text_size_16sp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/space_12dp"
                android:src="@mipmap/ic_detail_arrow_normal"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:background="@color/color_schedule_line"/>

        <LinearLayout
            android:id="@+id/llScheduleLocation"
            android:layout_width="match_parent"
            android:layout_height="@dimen/schedule_item_size"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="@dimen/space_16dp"
                android:src="@mipmap/ic_detail_location"/>

            <TextView
                android:id="@+id/tvScheduleLocation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_12dp"
                android:layout_marginRight="@dimen/space_10dp"
                android:layout_weight="1"
                android:background="@color/colorTranslate"
                android:ellipsize="end"
                android:lines="1"
                android:text="위치"
                android:textColor="@color/color_schedule_text"
                android:textSize="@dimen/text_size_16sp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/space_12dp"
                android:src="@mipmap/ic_detail_arrow_normal"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:background="@color/color_schedule_line"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivRemarkIcon"
                android:layout_width="30dp"
                android:layout_height="50dp"
                android:layout_marginLeft="@dimen/space_16dp"
                android:src="@mipmap/ic_detail_remarks"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/schedule_item_size"
                android:layout_marginLeft="@dimen/space_12dp"
                android:layout_toRightOf="@id/ivRemarkIcon"
                android:background="@color/colorTranslate"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:lines="1"
                android:text="@string/remarks"
                android:textColor="@color/color_schedule_text"
                android:textSize="@dimen/text_size_16sp"/>

            <EditText
                android:id="@+id/etScheduleDesc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/ivRemarkIcon"
                android:layout_marginBottom="@dimen/space_10dp"
                android:layout_marginLeft="@dimen/space_10dp"
                android:layout_marginRight="@dimen/space_10dp"
                android:background="@drawable/bg_remark_edit_text"
                android:gravity="top|left"
                android:hint="@string/please_input_desc"
                android:paddingTop="@dimen/space_12dp"
                android:textSize="@dimen/text_size_16sp"/>
        </RelativeLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>